<resources>
    <string name="app_name">家教帮</string>
    <string name="versionNum">1.0</string>
    <string name="verification_code">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="please_input_verify">请输入验证码</string>
    <string name="title_identity">请选择你的身份</string>
    <string name="send_again">重新发送</string>
    <string name="password_login">密码登录</string>
    <string name="phoneN_prefix">+86</string>
    <string name="delete_all_num">一键清除电话号码</string>
    <string name="input_phone_edit">输入电话号码的编辑框</string>
    <string name="icon_correct">手机号图标</string>
    <string name="icon">app图标</string>
    <string name="please_input_phoneN">请输入手机号</string>
    <string name="return_inputP">返回输入手机号的界面</string>
    <string name="login_agree">登录代表你已同意</string>
    <string name="agreement">家教帮用户协议、隐私政策</string>
    <string name="menu_left_up">左上角菜单</string>
    <string name="title_home">首页</string>
    <string name="employment_inform">招聘信息</string>
    <string name="today_recommend">今日推荐</string>
    <string name="message">消息</string>
    <string name="vertical_line">竖线</string>
    <string name="site">龙泉驿</string>
    <string name="person_name">罗胜</string>
    <string name="release_time">24分钟前</string>
    <string name="grade">四年级</string>
    <string name="subject">数学</string>
    <string name="money_unit">元/小时</string>
    <string name="price">80元/小时</string>
    <string name="icon_location">位置图标</string>
    <string name="icon_location_indicator">位置指示图标</string>
    <string name="text_employment">招聘信息</string>
    <string name="exit_login">退出登录</string>
    <string name="input_bottom_hint">未注册的手机号验证后自动创建家教帮账户</string>
    <string name="forget_password">忘记密码</string>
    <string name="please_input_key">请输入密码</string>
    <string name="Head_portrait">头像</string>
    <string name="user_name">欧巴兽兽</string>
    <string name="text_choose_mobile_album">从手机相册选择</string>
    <string name="text_cancel">取消</string>
    <string name="text_shot">拍摄</string>
    <string name="version">1.0</string>
    <string name="todo">TODO</string>
    <string name="unit">元/小时</string>
    <string name="joson">Joson</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_release">确认发布</string>
    <string name="button_release">发布</string>
    <string name="cancel">取消</string>
    <string name="title_subject">科目</string>

    <string name="myaccount_viewIcon">查看头像</string>
    <string name="myaccount_shoot">拍摄</string>
    <string name="myaccount_changeFromPhoto">从手机相册选择</string>
    <string name="myaccount_cancel">取消</string>

    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="bottom_index">首页</string>
    <string name="bottom_mine">我的</string>
</resources>
