<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/input_phone_backg">
    <!--图标-->
    <ImageView
        android:id="@+id/icon"
        android:contentDescription="@string/icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input"
        android:layout_marginBottom="81dp"
        android:src="@drawable/icon" />
    <LinearLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:layout_above="@+id/get_verify"
        android:orientation="horizontal">
        <!--+86文本-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneN_prefix"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />
        <!--向右的箭头-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/phone_number"/>
        <!--输入手机还文本框-->
        <EditText
            android:id="@+id/input_phone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_phoneN"
            android:textColorHint="@color/colorGray"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:inputType="phone"
            android:maxLines="1"
            android:maxLength="13"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:theme="@style/MyEditText" />
            <!--focusable、focusableInTouchMode属性为了截断进入页面输入框自动获取焦点-->
        <!--删除符号-->
        <ImageView
            android:id="@+id/image_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:visibility="gone"
            android:contentDescription="@string/delete_all_num"
            android:src="@drawable/icon_delete" />
    </LinearLayout>
    <!--输入框下的横线-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/get_verify"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/inputn_below_line" />
    <!--获取验证码按钮-->
    <Button
        android:id="@+id/get_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_button_dark"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:text="@string/verification_code"
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:textColor="@color/colorBlack" />
    <!--密码登录-->
    <TextView
        android:id="@+id/password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_login"
        android:layout_below="@id/get_verify"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:textColor="@color/colorWhite" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp">
        <TextView
            android:id="@+id/login_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_agree"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:id="@+id/agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"
            android:autoLink="all"
            android:textColor="@color/colorYellow"
            android:layout_toRightOf="@+id/login_agree"
            android:layout_toEndOf="@+id/login_agree" />

    </RelativeLayout>

</RelativeLayout>