<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/myAccount_viewIcon"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/myaccount_viewIcon"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@android:color/background_dark"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/myAccount_takePhoto"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/myaccount_shoot"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@android:color/background_dark"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/myAccount_takePic"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/myaccount_changeFromPhoto"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@android:color/background_dark"/>



    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/myAccount_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/myaccount_cancel"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@android:color/background_dark"/>

</LinearLayout>