<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/input_phone_backg">
    <!--图标-->
    <ImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/icon" />

    <LinearLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_below="@+id/icon"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/input_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <!--+86文本-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/phoneN_prefix"
                android:textColor="@color/colorYellow"
                android:textSize="20sp" />
            <!--向右的箭头-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:src="@drawable/phone_number" />
            <!--输入手机还文本框-->
            <EditText
                android:id="@+id/input_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/please_input_phoneN"
                android:inputType="phone"
                android:maxLength="13"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGray"
                android:textSize="20sp"
                android:theme="@style/MyEditText" />
            <!--focusable、focusableInTouchMode属性为了截断进入页面输入框自动获取焦点-->
            <!--删除符号-->
            <ImageView
                android:id="@+id/image_delete1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/delete_all_num"
                android:src="@drawable/icon_delete"
                android:visibility="gone" />
        </LinearLayout>
        <!--输入框下的横线-->
        <ImageView
            android:id="@+id/first_below_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/input_below_line" />
        <TextView
            android:id="@+id/bottom_hint"
            android:layout_marginTop="3dp"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_bottom_hint"
            android:textColor="@color/colorGray"/>
<!--        输入密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/input_login_key"
                android:layout_width="0dp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:background="@null"
                android:focusable="true"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:focusableInTouchMode="true"
                android:hint="@string/please_input_key"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGray"
                android:textSize="20sp"
                android:theme="@style/MyEditText" />
            <!--删除符号-->
            <ImageView
                android:id="@+id/image_delete2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/delete_all_num"
                android:src="@drawable/icon_delete"
                android:layout_marginTop="10dp"
                android:visibility="gone" />
            <ImageView
                android:id="@+id/display_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:src="@drawable/hide_password"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/bottom_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:src="@drawable/input_below_line"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
    <!--获取验证码按钮-->
    <Button
        android:id="@+id/get_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_button_dark"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="30dp"
        android:text="@string/verification_code"
        android:layout_below="@+id/input"
        android:textSize="20sp"
        android:textColor="@color/colorBlack" />
    <!--密码登录-->
    <TextView
        android:id="@+id/password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_login"
        android:layout_below="@id/get_verify"
        android:layout_marginTop="30dp"
        android:layout_marginStart="35dp"
        android:textColor="@color/colorYellow" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_below="@id/get_verify"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:layout_alignParentEnd="true"
        android:visibility="gone"
        android:textColor="@color/colorYellow" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp">
        <TextView
            android:id="@+id/login_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_agree"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:id="@+id/agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"
            android:autoLink="all"
            android:textColor="@color/colorYellow"
            android:layout_toEndOf="@+id/login_agree" />
    </RelativeLayout>

</RelativeLayout>