<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/icon_head"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:src="@drawable/luosheng"
        app:riv_oval="true"/>

    <ImageView
        android:id="@+id/iv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/icon_head"
        android:layout_toRightOf="@+id/icon_head"
        app:srcCompat="@drawable/icon_location" />

    <TextView
        android:id="@+id/label_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/iv_location"
        android:layout_toEndOf="@+id/iv_location"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="@string/site"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/person_name"
        android:layout_toRightOf="@+id/icon_head"
        android:layout_toEndOf="@+id/icon_head"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/person_name"/>
    <ImageView
        android:id="@+id/icon_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/release_time"
        android:layout_toEndOf="@+id/label_site"
        android:layout_toRightOf="@+id/label_site"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        />
    <TextView
        android:id="@+id/label_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_time"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/icon_time"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/icon_time"/>
    <TextView
        android:id="@+id/label_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ellipse_blue_background_shape"
        android:layout_toRightOf="@+id/label_site"
        android:layout_toEndOf="@+id/label_site"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:text="@string/grade"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/course_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/label_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_cny"
        android:layout_toLeftOf="@+id/label_price"
        android:layout_toStartOf="@+id/label_price"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/label_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_toLeftOf="@+id/money_unit"
        android:layout_toStartOf="@+id/money_unit"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"/>
    <TextView
        android:id="@+id/money_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/money_unit" />
</RelativeLayout>